gcc/ 	PR target/60204 	* config/i386/i386.c (classify_argument): Pass structures of size 	64 bytes or less in register.

tessuite/gcc/
	PR target/60204
	* gcc.target/x86_64/abi/avx512f/test_passing_structs.c: Update to
	reflect abi fix.
	* gcc.target/x86_64/abi/avx512f/test_passing_unions.c: Ditto.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@207933 138bc75d-0d04-0410-961f-82ee72b054a4